# fun_scrambler

./: README.md  fun_scrambler.py  setup.cfg
tests/: argument_parser_test.py  fun_scrambler_test.py
