[metadata]
name = fun_scrambler
version = 0.0.0
description = Fun character scrambler using python3 and curses.
long_description = file: README.md
long_description_content_type = text/markdown
url = m
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file =

[options]
packages = find:
install_requires:

python_requires = >= 3.7

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_script =
    fun-scrambler = fun_scrambler:main
